# syrtis-python-client

./: .gitignore  README.md  pyproject.toml
.wex/: .gitignore  config.yml
.wex/knowledge/readme/: introduction.md
.wex/python/app_manager/: .gitignore  app_workdir.py
examples/: __main__.py
src/syrtis_python_client/: __init__.py
src/syrtis_python_client/Common/: SyrtisClient.py  entitySchemas.py  entity_schemas.py  generatedRepositories.py  generated_repositories.py  syrtis_client.py
src/syrtis_python_client/Entity/: Uesr.py  uesr.py
src/syrtis_python_client/Repository/: AbstractApiRepository.py  UesrRepository.py  abstract_api_repository.py  uesr_repository.py
src/syrtis_python_client/agent/: abstract_agent.py
src/syrtis_python_client/common/: entity_schemas.py  generated_entity_schemas.py  generated_repositories.py  syrtis_client.py
src/syrtis_python_client/data/entity/: message.json  message_stamp.json  request.json  session.json  uesr.json  user.json
src/syrtis_python_client/entity/: abstract_api_entity.py  message.py  message_stamp.py  request.py  session.py  uesr.py  user.py
src/syrtis_python_client/repository/: abstract_api_repository.py  message_repository.py  message_stamp_repository.py  request_repository.py  session_repository.py  uesr_repository.py  user_repository.py
