[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = [
    'src/wexample_syrtis-client-python/py.typed',
]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_syrtis-client-python"
from = "src"

[project]
name = "wexample-syrtis-client-python"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
